Tweaks for usability

--- a/CD6/master.Master
+++ b/CD6/master.Master
@@ -46,8 +46,12 @@
                         <li><a href="sos.aspx">Sign Sheets</a></li>
                         <li><a href="asset.aspx">Assets</a></li>
                         <li><a href="recipient.aspx">Recipeints</a></li>
+                        <li><a href="users.aspx">Manage Users</a></li>
+                        <li><a href="email.aspx">Manage Email Copy</a></li>
+                        <li><a href="sosTemplate.aspx">Manage Sign Sheet Copy</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <!--<li><a href="#">Settings</a></li>-->
                         <li><a href="login.aspx">Login</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
