--- a/master.Master
+++ b/master.Master
@@ -52,7 +52,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <!--<li><a href="#">Settings</a></li>-->
-                        <li><a href="login.aspx">Login</a></li>
+                        <li><a href="login.aspx"><asp:Label ID="lblLoginButton" runat="server" Text="Login" /></a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
