--- a/master.Master
+++ b/master.Master
@@ -15,6 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/add_asset_popup.js"></script>
+    <script src="js/info_popup.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -59,9 +60,21 @@
         </nav>
 
         <div id="content">
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
-            </asp:ContentPlaceHolder>
+            <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content" style="text-align:center;">
+                        <div class="modal-header">
+                            <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true"/>-->
+                            <h4 class="modal-title" id="myModalLabel"><asp:Label ID="lblModal_header" runat="server" /></h4>
+                        </div>
+                        <div class="modal-body">
+                            <h3><asp:label id="lblModal_body" runat="server" /></h3>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
         </div>
 
         </form>
@@ -147,9 +160,7 @@
                         <p style="font-family:'Verdana';font-size:10px;">Copyright 2014, Temple University, All rights reserved.</p>
                     </div>
                 </div>
-
             </div>
         </div>
-
 </body>
 </html>
