Log Out Functionality and adding the EditorID button

--- a/master.Master
+++ b/master.Master
@@ -54,6 +54,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <!--<li><a href="#">Settings</a></li>-->
                         <li><a href="login.aspx"><asp:Label ID="lblLoginButton" runat="server" Text="Login" /></a></li>
+                        <li><asp:linkButton ID="logout" runat="server" Text="Log Out " OnClick="logout_Click"></asp:linkButton></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
