new updated things

--- a/master.Master
+++ b/master.Master
@@ -42,7 +42,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="sos.aspx">Sign Sheets</a></li>
+                        <li><a href="sos_track.aspx">Dashboard</a></li>
+                        <li><a href="sos_create.aspx">Sign Sheets</a></li>
                         <li><a href="asset.aspx">Assets</a></li>
                         <li><a href="recipient.aspx">Recipeints</a></li>
                         <li><a href="users.aspx">Manage Users</a></li>
