--- a/master.Master
+++ b/master.Master
@@ -110,7 +110,10 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <span class="glyphicon glyphicon-globe" style="padding-left:5px;padding-top:5px;"></span>
-                                <span style="padding-left:5px;font-family:'Droid Sans';font-size:11px;">Maps and Directions</span>
+                                <span style="padding-left:5px;font-family:'Droid Sans';font-size:11px;">Maps and 
+
+
+                                </span>
                             </div>
                         </div>
 
