--- a/master.Master
+++ b/master.Master
@@ -1,5 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="master.master.cs" Inherits="CD6.master" %>
 <!DOCTYPE html>
+<-- last one --!>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>Temple CLAAMS</title>
