--- a/master.Master
+++ b/master.Master
@@ -23,8 +23,8 @@
         
         <div id="header">
             <div class="row">
-                <div class="col-xs-4"><img src="img/web_logo_tu_outlined-stacked.png" alt="Temple Logo" /></div>
-                <div class="col-xs-4 col-xs-offset-4" style="text-align:right"><h1>CLA Asset Management System</h1></div>
+                <div class="col-xs-3"><img src="img/web_logo_tu_outlined-stacked.png" alt="Temple Logo" /></div>
+                <div class="col-xs-9" style="text-align:right"><h1>CLA Asset Management System</h1></div>
             </div>
         </div>
 
