--- a/master.Master
+++ b/master.Master
@@ -20,109 +20,74 @@
 <body>
     <div class="wrapper">
         <form id="form1" runat="server">
-        
-        <div id="header">
-            <div class="row">
-                <div class="col-xs-3"><img src="img/web_logo_tu_outlined-stacked.png" alt="Temple Logo" /></div>
-                <div class="col-xs-9" style="text-align:right"><h1>CLA Asset Management System</h1></div>
-            </div>
-        </div>
-
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+            <div id="header">
+                <div class="row">
+                    <div class="col-xs-3"><img src="img/web_logo_tu_outlined-stacked.png" alt="Temple Logo" /></div>
+                    <div class="col-xs-9" style="text-align:right"><h1>CLA Asset Management System</h1></div>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="sos_track.aspx">Dashboard</a></li>
-                        <li><a href="recipient.aspx">Recipeints</a></li>
-                        <li><a href="asset.aspx">Assets</a></li>
-                        <li><a href="sos_create.aspx">Sign Sheets</a></li>
-                        <li><a href="users.aspx">Admin</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <!--<li><a href="#">Settings</a></li>-->
-                        <li><span style="color:#ffffff; font-family:BebasNeue; padding:15px 15px; position:relative; display:block;"><asp:Label ID="lblLoginButton" runat="server" Text="Login" /></span></li>
-                        <li><asp:linkButton ID="logout" runat="server" Text="Log Out " OnClick="logout_Click"></asp:linkButton></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div><!--/.container-fluid -->
-        </nav>
-
-        <div id="content">
-            <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content" style="text-align:center;">
-                        <div class="modal-header">
-                            <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true"/>-->
-                            <h4 class="modal-title" id="myModalLabel"><asp:Label ID="lblModal_header" runat="server" /></h4>
-                        </div>
-                        <div class="modal-body">
-                            <h3><asp:label id="lblModal_body" runat="server" /></h3>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="sos_track.aspx">Dashboard</a></li>
+                            <li><a href="recipient.aspx">Recipeints</a></li>
+                            <li><a href="asset.aspx">Assets</a></li>
+                            <li><a href="sos_create.aspx">Sign Sheets</a></li>
+                            <li><a href="users.aspx">Admin</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <!--<li><a href="#">Settings</a></li>-->
+                            <li><span style="color:#ffffff; font-family:BebasNeue; padding:15px 15px;font-size:16px;position:relative; display:block;"><asp:Label ID="lblLoginButton" runat="server" Text="Login" /></span></li>
+                            <li><asp:linkButton ID="logout" runat="server" Text="Log Out " OnClick="logout_Click"></asp:linkButton></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div><!--/.container-fluid -->
+            </nav>
+            <div id="content">
+                <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content" style="text-align:center;">
+                            <div class="modal-header">
+                                <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true"/>-->
+                                <h4 class="modal-title" id="myModalLabel"><asp:Label ID="lblModal_header" runat="server" /></h4>
+                            </div>
+                            <div class="modal-body">
+                                <h3><asp:label id="lblModal_body" runat="server" /></h3>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
             </div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
-        </div>
-
         </form>
         <div class="push"></div>
     </div>
-
         <div class="footer">
             <div id="footer_wrapper">
-
                 <div class="row" id="footer_address">
                     <div class="col-md-3 col-xs-offset-1">
-
                         <div class="row">
                             <div class="col-lg-12">
                                 <span class="glyphicon glyphicon-map-marker" style="padding-left:5px;padding-top:5px;"></span>
-                                <span style="font-size:22px;">Temple University</span><br />
-                                <span style="font-size:18px;padding-left:22px;">College of Liberal Arts</span>
+                                <span style="font-size:22px;">College of Liberal Arts</span><br />
+                                <span style="font-size:18px;padding-left:22px;">Temple University</span>
                                 <div style="padding-left:22px;">
-                                    <span style="font-family:'Droid Sans';font-size:12px;">Anderson Hall<br />100 Some Address<br />Philadelphia, PA 19122</span>
+                                    <span style="font-family:'Droid Sans';font-size:12px;">1114 W. Polett Walk<br />Anderson Hall<br />Philadelphia, PA 19122</span>
                                 </div>
                             </div>
                         </div>
-
-                    </div>
-                    <div class="col-md-3 col-xs-offset-1">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <span class="glyphicon glyphicon-book" style="padding-left:5px;padding-top:5px;"></span>
-                                <span style="padding-left:5px;font-family:'Droid Sans';font-size:11px;">Cherry and White Directory</span>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <span class="glyphicon glyphicon-globe" style="padding-left:5px;padding-top:5px;"></span>
-                                <span style="padding-left:5px;font-family:'Droid Sans';font-size:11px;">Maps and 
-
-
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <span class="glyphicon glyphicon-earphone" style="padding-left:5px;padding-top:5px;"></span>
-                                <span style="padding-left:5px;font-family:'Droid Sans';font-size:11px;">Contact</span>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
-
                 <div class="row" id="footer_utility_bar">
                     <div class="col-md-1 col-sm-2 col-xs-offset-1">TUPortal</div>
                     <div class="col-md-1 col-sm-2 col-xs-offset-1">TUMail</div>
@@ -131,10 +96,9 @@
                     <div class="col-md-1 col-sm-2 col-xs-offset-1">Policies</div>
                     <div class="col-md-2 col-sm-2 col-xs-offset-1">Careers At Temple</div>
                 </div>
-
                 <div class="row" id="footer_copyright">
                     <div class="col-md-12 col-xs-offset-1">
-                        <p style="font-family:'Verdana';font-size:10px;">Copyright 2014, Temple University, All rights reserved.</p>
+                        <p style="font-family:'Verdana';font-size:10px;">Copyright 2015, Temple University, All rights reserved.</p>
                     </div>
                 </div>
             </div>
